<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="230dp"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="@dimen/margin_medium"
    android:layout_marginTop="@dimen/margin_medium"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/margin_small"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/yellow"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_small"
            android:paddingStart="@dimen/margin_medium_2"
            android:paddingTop="@dimen/margin_small">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/dummy_pro_item_name"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kent_ridge_txt"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ll_bottom"
            android:foreground="@android:drawable/screen_background_dark_transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/dummy_burger" />

        <TextView
            android:id="@+id/tv_promotion_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/item_name_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular_3x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_promotion_item_name"
            android:layout_centerHorizontal="true"
            android:background="@color/yellow"
            android:padding="@dimen/margin_small"
            android:text="@string/bupple_exclusive_txt"
            android:textColor="@color/white" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_promotion_item_name"
            android:layout_marginStart="@dimen/margin_xxlarge"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_item"
            android:layout_below="@id/view_divider"
            android:gravity="center"
            android:text="@string/promotion_date_txt"
            android:textColor="@color/white" />
    </RelativeLayout>
</android.support.v7.widget.CardView>